# srobertsphd.github.io

./: .gitignore  404.html  README.md  _config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
_data/: contact.yml
_posts/: 2025-01-25-setting-up-github-blog.md
assets/stylesheets/: blog-custom.css
blog/: index.html
blog/2025/05/31/my-first-blog-post/: index.html
blog/2025/06/01/creating-beautiful-feature-cards/: index.html
docs/: .pages  feature-cards-example.md  index.md
docs/blog/: .pages  index.md
docs/blog/posts/: .pages  feature-cards.md  first-post.md
docs/blog/templates/: category.html
docs/mkdocs/: .pages  cursor-help.md  deploy-guide.md  feature-cards-examples.md  feature-cards-guide.md  gd-alternatives.md  gd-to-md.md  gd-to-pdf.md  index.md
feature-cards-example/: index.html
mkdocs/: index.html
mkdocs/cursor-help/: index.html
mkdocs/deploy-guide/: index.html
mkdocs/feature-cards-examples/: index.html
mkdocs/feature-cards-guide/: index.html
mkdocs/gd-alternatives/: index.html
mkdocs/gd-to-md/: index.html
mkdocs/gd-to-pdf/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/blog/2025/05/31/my-first-blog-post/: index.html
site/feature-cards-example/: index.html
site/mkdocs/: index.html
site/mkdocs/deploy-guide/: index.html
site/mkdocs/feature-cards-guide/: index.html
site/mkdocs/gd-alternatives/: index.html
site/mkdocs/gd-to-md/: index.html
site/search/: search_index.json
(+1 files in other folders)
